feat: jsx refactor, start work managed message service

--- a/apps/website/src/component/form/field/base/field-base.module.pcss
+++ b/apps/website/src/component/form/field/base/field-base.module.pcss
@@ -4,7 +4,7 @@
 }
 
 .fieldBase {
-  @apply h-12 overflow-visible bg-b-600 rounded;
+  @apply h-8 overflow-visible bg-b-600 rounded;
   transition: background-color .15s linear;
   &:focus-within {
     @apply bg-b-900;
@@ -12,7 +12,7 @@
 }
 
 .fieldEditor {
-  @apply min-h-12 overflow-visible rounded outline-none;
+  @apply min-h-8 overflow-visible rounded outline-none shadow-inner;
   transition: outline-color .15s linear, outline-width .15s linear;
   &:focus-within {
     @apply outline-2 outline-a-300;
